# ModManager

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  FutureWorkNeeded.md  PKGBUILD  README.md  code style.md  fr.marcbarbier.modmanager.desktop  meson.build  meson_options.txt  naming_conventions.md  note for future developments.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cmake-single-platform.yml
src/: archives.c  archives.h  file.c  file.h  fomod.c  fomod.h  getDataPath.c  getDataPath.h  getHome.c  getHome.h  install.c  install.h  loadOrder.c  loadOrder.h  macro.h  main.c  main.h  order.c  order.h  overlayfs.c  overlayfs.h  steam.c  steam.h
src/cli/: cli.c  cli.h  fomod.c  fomod.h
src/fomod/: fomodTypes.h  group.c  group.h  parser.c  parser.h  xmlUtil.c  xmlUtil.h
src/gui/: fomod_install.c  fomod_install.h  game_tab.c  main.c  mod_tab.c  mod_tab.h  plugin_tab.c  window.h
src/include/: constants.h  deploy.h  errorType.h  file.h  fomod.h  fomodTypes.h  gameData.h  getHome.h  install.h  loadOrder.h  mods.h  order.h  steam.h
src/lib/: archives.c  archives.h  deploy.c  file.c  fomod.c  gameData.c  getHome.c  install.c  loadOrder.c  macro.h  mods.c  order.c  overlayfs.c  overlayfs.h  steam.c
src/lib/fomod/: group.c  group.h  parser.c  xmlUtil.c  xmlUtil.h
subprojects/: .gitignore  libloot-0.28-rs.wrap
subprojects/lib_mod_manager/: meson.build
subprojects/lib_mod_manager/src/: archives.c  archives.h  deploy.c  deploy.cpp  file.c  fomod.c  fomod.cpp  fomod_parser.cpp  game_executables.c  loadOrder.c  mods.c  overlayfs.c  overlayfs.cpp  overlayfs.h  overlayfs.hpp  steam.c
subprojects/lib_mod_manager/src/fomod/: group.c  group.h  parser.c  xmlUtil.c  xmlUtil.h
subprojects/lib_mod_manager/src/public/: constants.h  deploy.h  deploy.hpp  errorType.h  file.h  fomod.h  fomod.hpp  fomodTypes.h  fomodTypes.hpp  game_executables.h  loadOrder.h  modmanager.h  mods.h  steam.h
subprojects/mod_manager_gui/: meson.build
subprojects/mod_manager_gui/src/: fomod_install.c  fomod_install.cpp  game_tab.c  game_tab.h  main.c  mod_tab.c  plugin_tab.h  settings_tab.c  settings_tab.h  window.h
subprojects/modfs/: meson.build
subprojects/modfs/src/: main.cpp
subprojects/path_utils/: meson.build
subprojects/path_utils/src/: case_adapted_path.cpp
subprojects/path_utils/src/public/: case_adapted_path.h  case_adapted_path.hpp
subprojects/steam_hook/: meson.build
subprojects/steam_hook/src/: binding.rs  main.rs
